# Epitome3D

./: .gitignore  .gitmodules  CMakeLists.txt  COPY ME TO build FOLDER NAMED cat.bmp please  D3DLib.sln  Epitome3D-old.sln  Epitome3D.sln  Makefile  Makefile.old  README.md  debug.mak  debug.mak.old  epitome-linuxtester.cpp  release.mak  release.mak.old
D3DLib/: D3D.cpp  D3DLib.vcxproj  D3DLib.vcxproj.filters  bitmap.cpp  bitmap.h  cpu.h  frustum.cpp  frustumcull.h  globals.h  input.h  math3d.h  resource.h  shaderlight.cpp  shaderlight.h  shadertexture.cpp  sound.h  sound_WAVEPCM.h  stdafx.h  viewport.h  window.h
D3DLib/src/: D3D.cpp  D3D.h  D3Ddesc.cpp  D3Ddesc.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  exception.cpp  fps.cpp  fps.h  globals.cpp  globals.h  input.cpp  math3d.cpp  math3d.h  model.cpp  model.h  model_FBX.h  model_OBJ.cpp  model_OBJ.h  painter.cpp  painter.h  shader.cpp  shader.h  shaderlight.cpp  shaderlight.h  shadertexture.cpp  shadertexture.h  text.h  texture.cpp  viewport.cpp  window.cpp  window.h
D3DLib/src/models/: model_FBX.cpp  model_FBX.h  model_OBJ.cpp  model_OBJ.h
D3DLib/src/shaders/: shader_LIGHT.cpp  shader_LIGHT.h  shader_TEXTURE.cpp  shader_TEXTURE.h
D3DLib/src/sounds/: sound_WAVEPCM.cpp
D3DLibTest/: D3DLibTest.vcxproj  D3DLibTest.vcxproj.filters
D3DLibTest/src/: main.cpp  main.h
assets/image/: Black.dds  CheckerboardGrass.dds  CheckerboardHill.dds  Moon.dds  Teapot.dds  epitome-512-extended3d-white.dds  epitome-512-fillblack.dds
assets/image/Cursors/: Accurate Click.dds  Accurate.dds
assets/model/: Earth.txt  Sphere.txt  cube.fbx  sphere.fbx  teapot.fbx
assets/shader/: Light.ps  Light.vs  Texture.ps  Texture.vs  light.hlsl  texture.hlsl
d3dlib-core/: D3DLib.vcxproj.filters  d3dlib-core.vcxproj  d3dlib-core.vcxproj.filters
d3dlib-core/src/: D3D.cpp  D3Ddesc.cpp  D3Ddesc.h  bitmap.h  camera.cpp  cpu.cpp  exception.cpp  exception.h  fps.h  frustum.h  frustumcull.cpp  globals.cpp  globals.h  input.cpp  light.h  shader.h  sound.cpp  text.cpp  texture.h  timer.cpp  timer.h  window.cpp
d3dlib-core/src/sounds/: sound_WAVEPCM.h
d3dlib-tester/: d3dlib-tester.vcxproj
d3dlib-tester/src/: main.cpp  main.h
epitome-core/: CMakeLists.txt  Makefile  Makefile.old  debug.mak  debug.mak.old  epitome-core-Debug.vgdbsettings  epitome-core-Release.vgdbsettings  epitome-core.vcxproj  epitome-core.vcxproj.filters  gcc_Debug.h  gcc_Release.h  release.mak  release.mak.old
epitome-core/src/: D3D.cpp  D3Ddesc.cpp  D3Ddesc.h  bitmap.cpp  camera.cpp  camera.h  epitome-core.h  exception.cpp  frustum.cpp  frustum.h  globals.cpp  globals.h  init.cpp  init.h  input.h  math3d.cpp  math3d.h  painter.h  shader.h  sound.cpp  sound.h  text.cpp  text.h  timer.h  viewport.cpp  viewport.h  window.cpp  window.h
epitome-core/src/EPITOME-CORE/: display.cpp  display.h  error.cpp  error.h  init.cpp  init.h  keyboard.cpp  keyboard.h  keys.h  mathbasic.h  memory.cpp  memory.h  mouse.cpp  mouse.h  system.h  utility.h  utils.h  window.cpp  window.h
epitome-core/src/models/: model_FBX.h
epitome-core/src/shaders/: shader_LIGHT.cpp  shader_TEXTURE.cpp  shader_TEXTURE.h
epitome-core/src/sounds/: sound_WAVEPCM.h
epitome-d3dcore/: epitome-core.vcxproj.filters  epitome-d3dcore.vcxproj
epitome-d3dcore/src/: D3D.cpp  D3D.h  bitmap.h  cpu.cpp  cpu.h  exception.h  fps.cpp  fps.h  frustumcull.cpp  frustumcull.h  input.cpp  model.cpp  model.h  painter.cpp  resource.h  shader.cpp  texture.cpp  texture.h  timer.cpp
epitome-d3dcore/src/models/: model_FBX.cpp  model_OBJ.cpp  model_OBJ.h
epitome-d3dcore/src/shaders/: shader_LIGHT.h
epitome-d3dcore/src/sounds/: sound_WAVEPCM.cpp
epitome-d3dtester/: epitome-d3dtester.vcxproj
epitome-d3dtester/src/: main.cpp  main.h
epitome-glcore/: epitome-glcore.vcxproj  epitome-glcore.vcxproj.filters  epitome.h
epitome-gltester/: epitome-gltester.vcxproj  main.cpp  main.h
epitome-linuxtester/: epitome-linuxtester-Debug.vgdbsettings  epitome-linuxtester-Release.vgdbsettings  epitome-linuxtester.vcxproj  epitome-linuxtester.vcxproj.filters  gcc_Release.h  main.cpp  main.h
epitome-modeling/: CodeGeneration.Log.xml  epitome-core.classdiagram  epitome-core.classdiagram.layout  epitome-extended.classdiagram  epitome-extended.classdiagram.layout  epitome-modeling.modelproj
epitome-modeling/ModelDefinition/: Package1_0934.uml  Package_0935.uml  Package_0937.uml  Package_2121.uml  epitome-modeling.uml
epitome-shared/: epitome-shared.vcxitems
epitome-tester/: CMakeLists.txt  Makefile  Makefile.old  debug.mak  debug.mak.old  epitome-tester-Debug.vgdbsettings  epitome-tester-Release.vgdbsettings  epitome-tester.vcxproj  gcc_Debug.h  gcc_Release.h  main.cpp  release.mak  release.mak.old
epitome-tester/src/: main.cpp  main.h
include/directx/: fbxsdk.h
include/fbxsdk/: fbxsdk_def.h  fbxsdk_nsbegin.h
include/fbxsdk/core/: fbxclassid.h  fbxconnectionpoint.h  fbxdatatypes.h  fbxemitter.h  fbxevent.h  fbxeventhandler.h  fbxlistener.h  fbxloadingstrategy.h  fbxmanager.h  fbxmodule.h  fbxobject.h  fbxperipheral.h  fbxplugin.h  fbxplugincontainer.h  fbxproperty.h  fbxpropertydef.h  fbxpropertyhandle.h  fbxpropertypage.h  fbxpropertytypes.h  fbxquery.h  fbxqueryevent.h  fbxscopedloadingdirectory.h  fbxscopedloadingfilename.h  fbxstream.h  fbxsymbol.h  fbxsystemunit.h  fbxxref.h
include/fbxsdk/fileio/: fbxbase64coder.h  fbxexporter.h  fbxexternaldocreflistener.h  fbxfiletokens.h  fbxglobalcamerasettings.h  fbxgloballightsettings.h  fbxglobalsettings.h  fbxgobo.h  fbximporter.h  fbxiobase.h  fbxiopluginregistry.h  fbxiosettings.h  fbxiosettingspath.h  fbxprogress.h  fbxreader.h  fbxstatistics.h  fbxstatisticsfbx.h  fbxwriter.h
include/fbxsdk/scene/: fbxaxissystem.h  fbxcollection.h  fbxcollectionexclusive.h  fbxcontainer.h  fbxcontainertemplate.h  fbxdisplaylayer.h  fbxdocument.h  fbxdocumentinfo.h  fbxenvironment.h  fbxgroupname.h  fbxlibrary.h  fbxobjectfilter.h  fbxobjectmetadata.h  fbxobjectscontainer.h  fbxpose.h  fbxreference.h  fbxscene.h  fbxselectionnode.h  fbxselectionset.h  (+3 more)
lib/opengl/: freeglut_static.lib  glfw3.lib
(+156 files in other folders)
